[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Art/player.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "MainMenuAnimation"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( -4, -4, -4 ),
"update": 0,
"values": [ Vector2( 120.033, 380.856 ), Vector2( 355.586, 379.954 ), Vector2( 120.033, 380.856 ) ]
}

[node name="Main Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="DefaultMenu" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="GameNameLabel" type="Label" parent="DefaultMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 194.0
margin_top = 268.0
margin_right = 274.0
margin_bottom = 282.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Fragments"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="NewGameButton" type="Button" parent="DefaultMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_top = 126.0
margin_right = 738.0
margin_bottom = 186.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="CreditsButton" type="Button" parent="DefaultMenu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_top = 274.0
margin_right = 738.0
margin_bottom = 334.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Credits"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="ExitButton" type="Button" parent="DefaultMenu" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_top = 419.0
margin_right = 738.0
margin_bottom = 479.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Credits" type="Panel" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 218.0
margin_top = 122.0
margin_right = 780.0
margin_bottom = 461.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CreditsText" type="Label" parent="Credits" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 14.0
margin_right = 430.0
margin_bottom = 208.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Credits

Boris Fleysher - Producer, Programmer, Level Design
Stephen Melvin - Writer, Story Direction
Nate Spasiuk - Lead Designer, Artist, BGM
Andrew Somerville - Audio SFX, Programming support
Wang Dong - Programmer, Level Design
Guanfang Dong - Programmer, Level Design

Special thanks to our friends, family, instructors and class for helping us through the semester!"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="CreditsReturnButton" type="Button" parent="Credits" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 249.0
margin_top = 293.0
margin_right = 320.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/MainMenuAnimation = SubResource( 1 )
blend_times = [  ]

[node name="Sprite" type="Sprite" parent="." index="3"]

position = Vector2( 120.049, 380.856 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[connection signal="pressed" from="DefaultMenu/NewGameButton" to="." method="_on_NewGameButton_pressed"]

[connection signal="pressed" from="DefaultMenu/CreditsButton" to="." method="_on_CreditsButton_pressed"]

[connection signal="pressed" from="DefaultMenu/ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="pressed" from="Credits/CreditsReturnButton" to="." method="_on_CreditsReturnButton_pressed"]


